--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,32 +6,30 @@
   <h1>Listing users</h1>
 </div>
 
-<div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
-    <thead>
-      <tr>
-            <th>Name</th>
-            <th>Surname</th>
-            <th>Full name</th>
-            <th>Username</th>
-            <th>Email</th>
-            <th></th>
-        <th></th>
-        <th></th>
-      </tr>
-    </thead>
+<table class="datatable table table-striped">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Surname</th>
+      <th>Full name</th>
+      <th>Username</th>
+      <th>Email</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
 
-    <tbody>
-      <%= content_tag_for(:tr, @users) do |user| %>
-            <td><%= user.name %></td>
-            <td><%= user.surname %></td>
-            <td><%= user.full_name %></td>
-            <td><%= user.username %></td>
-            <td><%= user.email %></td>
-            <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+  <tbody>
+    <%= content_tag_for(:tr, @users) do |user| %>
+          <td><%= user.name %></td>
+          <td><%= user.surname %></td>
+          <td><%= user.full_name %></td>
+          <td><%= user.username %></td>
+          <td><%= user.email %></td>
+          <td><%= link_to 'Show', user %></td>
+      <td><%= link_to 'Edit', edit_user_path(user) %></td>
+      <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% end %>
+  </tbody>
+</table>
