--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,3 @@
 @import "bootstrap-generators";
 @import "bootstrap-variables";
-@import "dataTables/bootstrap/3/jquery.dataTables.bootstrap";
+@import "dataTables/bootstrap/3/jquery.dataTables.bootstrap.css";
