Add save state to datatable Add Boostrap Select for page length

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,4 @@
 @import "bootstrap-generators";
 @import "bootstrap-variables";
 @import "dataTables/bootstrap/3/jquery.dataTables.bootstrap.css";
+@import "bootstrap-select/bootstrap-select.min.css"
